--- a/src/main/resources/META-INF/resources/offline.html
+++ b/src/main/resources/META-INF/resources/offline.html
@@ -20,7 +20,7 @@
 
         .offline-image {
             width: 100%;
-            margin: 4em 0px;
+            margin: 4em 0;
         }
     </style>
 </head>
