Change name from LAMPView to Qualix

--- a/src/main/resources/META-INF/resources/offline.html
+++ b/src/main/resources/META-INF/resources/offline.html
@@ -29,7 +29,7 @@
 <div class="content">
     <img src="./images/offline.png" alt="VaadinCRM is offline" class="offline-image"/>
     <h1>Oh deer, you're offline</h1>
-    <p>Your internet connection is offline. Get back online to continue using LAMPView</p>
+    <p>Your internet connection is offline. Get back online to continue using Qualix</p>
 </div>
 <script>
     window.addEventListener('online', () => window.location.reload());
